--- a/src/index.html
+++ b/src/index.html
@@ -163,80 +163,28 @@
       border: 1px solid var(--border);
       border-radius: 14px;
       padding: 12px;
+      position: relative;
+      min-height: 200px;
     }
 
-    .sparkline svg {
+    .sparkline canvas {
       width: 100%;
-      height: 140px;
+      height: 200px;
       display: block;
     }
 
-    .sparkline-labels {
-      display: grid;
-      grid-auto-flow: column;
-      grid-auto-columns: 1fr;
-      gap: 8px;
-      margin-top: 8px;
-      font-size: 12px;
-      color: var(--muted);
-      text-align: center;
-      letter-spacing: 0.2px;
-    }
-
-    .sparkline-labels span {
-      display: inline-block;
-      background: rgba(255, 255, 255, 0.04);
-      border: 1px solid rgba(255, 255, 255, 0.08);
-      border-radius: 8px;
-      padding: 4px 6px;
-    }
-
-    .chart {
+    .chart-empty {
+      position: absolute;
+      inset: 0;
       display: flex;
-      flex-direction: column;
-      gap: 10px;
-      margin-top: 6px;
-    }
-
-    .bar {
-      display: grid;
-      grid-template-columns: 96px 1fr 56px;
       align-items: center;
-      gap: 10px;
+      justify-content: center;
       color: var(--muted);
       font-size: 14px;
     }
 
-    .bar-track {
-      position: relative;
-      width: 100%;
-      height: 14px;
-      background: rgba(255, 255, 255, 0.06);
-      border-radius: 8px;
-      overflow: hidden;
-    }
-
-    .bar-fill {
-      position: absolute;
-      inset: 0;
-      width: 0;
-      background: linear-gradient(90deg, #1dd3b0, #4deac6);
-      border-radius: 8px;
-      transition: width 0.6s ease;
-    }
-
-    .bar-value {
-      text-align: right;
-      color: var(--text);
-      font-weight: 600;
-      line-height: 1.4;
-    }
-
-    .bar-value small {
-      display: block;
-      color: var(--muted);
-      font-weight: 500;
-      font-size: 12px;
+    .chart-empty[hidden] {
+      display: none !important;
     }
 
     .entries {
@@ -305,6 +253,30 @@
       font-size: 13px;
     }
 
+    .bar-axis {
+      position: relative;
+      margin: 0 var(--bar-value) 6px var(--bar-label);
+      height: 18px;
+    }
+
+    .bar-axis::before {
+      content: "";
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 50%;
+      height: 1px;
+      background: rgba(255, 255, 255, 0.1);
+    }
+
+    .bar-axis span {
+      position: absolute;
+      bottom: calc(100% - 2px);
+      transform: translateX(-50%);
+      font-size: 12px;
+      color: var(--muted);
+    }
+
     .footer {
       margin-top: 32px;
       text-align: center;
@@ -363,12 +335,10 @@
           <div class="panel-title">最近の推移</div>
           <div class="status" id="sparkline-status">最大8か月</div>
         </div>
-        <div class="sparkline" id="sparkline"></div>
-
-        <div class="panel-header" style="margin-top: 16px;">
-          <div class="panel-title">月ごとの回数</div>
+        <div class="sparkline" id="sparkline">
+          <div class="chart-empty" id="sparkline-empty" hidden>データなし</div>
+          <canvas id="recent-chart"></canvas>
         </div>
-        <div class="chart" id="chart"></div>
       </section>
     </div>
 
@@ -377,17 +347,19 @@
     </footer>
   </div>
 
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.3/dist/chart.umd.min.js"></script>
   <script>
     const MONTHLY_FEE = 7678;
 
     const entriesEl = document.getElementById("entries");
-    const chartEl = document.getElementById("chart");
     const statsEl = document.getElementById("stats");
     const statusEl = document.querySelector("[data-status]");
-    const sparklineEl = document.getElementById("sparkline");
     const sparklineStatusEl = document.getElementById("sparkline-status");
+    const recentChartCanvas = document.getElementById("recent-chart");
+    const sparklineEmptyEl = document.getElementById("sparkline-empty");
     const hintEl = document.getElementById("hint");
     const isFile = window.location.protocol === "file:";
+    let recentChart = null;
 
     const showHint = () => {
       if (hintEl) hintEl.hidden = false;
@@ -444,38 +416,17 @@
       entriesEl.innerHTML = fragments;
     };
 
-    const renderChart = (months) => {
-      if (!months.length) {
-        chartEl.innerHTML = '<div class="empty">データなし</div>';
-        return;
-      }
-
-      const max = Math.max(...months.map((m) => m.count));
-      chartEl.innerHTML = months
-        .slice()
-        .sort((a, b) => new Date(b.date) - new Date(a.date))
-        .map(
-          (m) => {
-            const price = m.count > 0 ? yen(MONTHLY_FEE / m.count) : "–";
-            return `
-            <div class="bar">
-              <div>${monthLabel(m.date)}</div>
-              <div class="bar-track">
-                <div class="bar-fill" style="width: ${(m.count / max) * 100}%"></div>
-              </div>
-              <div class="bar-value">${m.count} 回<small>${price}/回</small></div>
-            </div>
-            `;
-          }
-        )
-        .join("");
-    };
 
     const renderSparkline = (months) => {
-      if (!sparklineEl) return;
+      if (!recentChartCanvas) return;
 
-      if (!months.length) {
-        sparklineEl.innerHTML = '<div class="empty">データなし</div>';
+      if (!months || !months.length) {
+        if (recentChart) {
+          recentChart.destroy();
+          recentChart = null;
+        }
+        if (sparklineEmptyEl) sparklineEmptyEl.hidden = false;
+        recentChartCanvas.style.display = "none";
         if (sparklineStatusEl) sparklineStatusEl.textContent = "";
         return;
       }
@@ -485,44 +436,122 @@
         .sort((a, b) => new Date(a.date) - new Date(b.date))
         .slice(-8);
 
-      const max = Math.max(...sorted.map((m) => m.count), 1);
-      const pad = 10;
-      const height = 110;
-      const spacing = 44;
-      const width = pad * 2 + (sorted.length - 1) * spacing;
+      if (!sorted.length) {
+        if (recentChart) {
+          recentChart.destroy();
+          recentChart = null;
+        }
+        if (sparklineEmptyEl) sparklineEmptyEl.hidden = false;
+        recentChartCanvas.style.display = "none";
+        if (sparklineStatusEl) sparklineStatusEl.textContent = "";
+        return;
+      }
 
-      const coords = sorted.map((m, i) => {
-        const x = pad + spacing * i;
-        const y = pad + (1 - m.count / max) * (height - pad * 2);
-        return { x, y };
+      if (typeof Chart === "undefined") {
+        console.error("Chart.js not loaded");
+        if (sparklineEmptyEl) {
+          sparklineEmptyEl.textContent = "Chart.js の読み込みに失敗しました";
+          sparklineEmptyEl.hidden = false;
+        }
+        recentChartCanvas.style.display = "none";
+        return;
+      }
+
+      const labels = sorted.map((m) => monthLabel(m.date));
+      const counts = sorted.map((m) => m.count);
+      const prices = sorted.map((m) => (m.count > 0 ? Math.round(MONTHLY_FEE / m.count) : null));
+
+      if (sparklineEmptyEl) {
+        sparklineEmptyEl.hidden = true;
+        sparklineEmptyEl.style.display = "none";
+      }
+      recentChartCanvas.style.display = "block";
+
+      if (recentChart) recentChart.destroy();
+
+      const ctx = recentChartCanvas.getContext("2d");
+      recentChart = new Chart(ctx, {
+        type: "line",
+        data: {
+          labels,
+          datasets: [
+            {
+              label: "回数",
+              data: counts,
+              borderColor: "#1dd3b0",
+              backgroundColor: "rgba(29, 211, 176, 0.22)",
+              tension: 0.35,
+              fill: true,
+              pointRadius: 4,
+              pointBackgroundColor: "#0a1021",
+              pointBorderColor: "#1dd3b0",
+              yAxisID: "yCounts"
+            },
+            {
+              label: "1回あたり価格",
+              data: prices,
+              borderColor: "#f4a949",
+              backgroundColor: "rgba(244, 169, 73, 0.24)",
+              tension: 0.35,
+              pointRadius: 4,
+              pointBackgroundColor: "#0a1021",
+              pointBorderColor: "#f4a949",
+              spanGaps: true,
+              yAxisID: "yPrice"
+            }
+          ]
+        },
+        options: {
+          responsive: true,
+          maintainAspectRatio: false,
+          interaction: {
+            mode: "index",
+            intersect: false
+          },
+          scales: {
+            x: {
+              ticks: { color: "#e8eef8" },
+              grid: { color: "rgba(255, 255, 255, 0.08)" }
+            },
+            yCounts: {
+              position: "left",
+              ticks: { color: "#e8eef8" },
+              grid: { color: "rgba(255, 255, 255, 0.1)" },
+              title: { display: true, text: "回数", color: "#e8eef8" },
+              beginAtZero: true
+            },
+            yPrice: {
+              position: "right",
+              ticks: {
+                color: "#e8eef8",
+                callback: (value) => yen(value)
+              },
+              grid: { drawOnChartArea: false, color: "rgba(255, 255, 255, 0.12)" },
+              title: { display: true, text: "円/回", color: "#e8eef8" }
+            }
+          },
+          plugins: {
+            legend: {
+              labels: { color: "#e8eef8" }
+            },
+            tooltip: {
+              callbacks: {
+                label: (ctx) => {
+                  if (ctx.dataset.yAxisID === "yPrice") {
+                    const value = ctx.parsed.y;
+                    return `${ctx.dataset.label}: ${yen(value)}`;
+                  }
+                  return `${ctx.dataset.label}: ${ctx.parsed.y} 回`;
+                }
+              }
+            }
+          }
+        }
       });
-
-      const linePoints = coords.map((c) => `${c.x},${c.y}`).join(" ");
-      const areaPoints = `${coords[0].x},${height - pad} ${linePoints} ${coords[coords.length - 1].x},${height - pad}`;
-
-      const labels = sorted.map((m) => `<span>${monthLabel(m.date)}</span>`).join("");
-
-      sparklineEl.innerHTML = `
-        <svg viewBox="0 0 ${width} ${height}" role="img" aria-label="月別の推移">
-          <defs>
-            <linearGradient id="spark-fill" x1="0" x2="0" y1="0" y2="1">
-              <stop offset="0%" stop-color="#1dd3b0" stop-opacity="0.35"/>
-              <stop offset="100%" stop-color="#1dd3b0" stop-opacity="0"/>
-            </linearGradient>
-          </defs>
-          <polygon points="${areaPoints}" fill="url(#spark-fill)"></polygon>
-          <polyline points="${linePoints}" fill="none" stroke="#1dd3b0" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"></polyline>
-          ${coords
-            .map(
-              (c) => `<circle cx="${c.x}" cy="${c.y}" r="4" fill="#0a1021" stroke="#1dd3b0" stroke-width="2"></circle>`
-            )
-            .join("")}
-        </svg>
-        <div class="sparkline-labels">${labels}</div>
-      `;
 
       if (sparklineStatusEl) sparklineStatusEl.textContent = `${sorted.length} か月表示`;
     };
+
 
     const renderStats = (entries, months) => {
       if (!entries.length) {
@@ -565,16 +594,22 @@
         if (!res.ok) throw new Error(`HTTP ${res.status}`);
         const data = await res.json();
         renderEntries(data.entries || []);
-        renderChart(data.month_counts || []);
         renderSparkline(data.month_counts || []);
         renderStats(data.entries || [], data.month_counts || []);
         if (statusEl) statusEl.textContent = "更新完了";
       } catch (err) {
         console.error(err);
         entriesEl.innerHTML = '<div class="empty">データの取得に失敗しました。<br>logs.json が存在するか確認してください。</div>';
-        chartEl.innerHTML = "";
         statsEl.innerHTML = "";
-        if (sparklineEl) sparklineEl.innerHTML = "";
+        if (recentChart) {
+          recentChart.destroy();
+          recentChart = null;
+        }
+        if (sparklineEmptyEl) {
+          sparklineEmptyEl.hidden = false;
+          sparklineEmptyEl.style.display = "flex";
+        }
+        if (recentChartCanvas) recentChartCanvas.style.display = "none";
         if (sparklineStatusEl) sparklineStatusEl.textContent = "";
         if (statusEl) statusEl.textContent = "読み込みエラー";
         if (isFile) showHint();
