Remove Ruby tooling

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
         <div class="entries" id="entries"></div>
         <div class="notice" id="hint" hidden>
           ローカルで開く場合は簡易サーバーが必要です。
-          例: <code>ruby -run -e httpd src -p 8000</code> を実行し、
+          例: <code>python3 -m http.server 8000 --directory src</code> を実行し、
           <code>http://localhost:8000/index.html</code> を開いてください。
         </div>
       </section>
