--- a/src/index.html
+++ b/src/index.html
@@ -43,9 +43,8 @@
         </div>
         <div class="entries" id="entries"></div>
         <div class="notice" id="hint" hidden>
-          ローカルで開く場合は簡易サーバーが必要です。
-          例: <code>python3 -m http.server 8000 --directory src</code> を実行し、
-          <code>http://localhost:8000/index.html</code> を開いてください。
+          ローカルで確認する場合は Worker を起動してください。例: <code>npm run dev</code> を実行し、表示された URL を開いてください。<br>
+          ログは R2（bucket: <code>obsidian</code>）の <code>ジム記録/logs.md</code> から読み込みます。
         </div>
       </section>
     </div>
