design: refresh UI

--- a/src/index.html
+++ b/src/index.html
@@ -12,21 +12,28 @@
 <body>
   <div class="glow" aria-hidden="true"></div>
   <div class="page">
-    <header>
-      <div class="title">
+    <header class="topbar">
+      <div class="brand">
         <div class="pill">GYM LOG</div>
-        トレーニングの軌跡
+        <div class="brand-text">
+          <div class="title">トレーニングの軌跡</div>
+          <div class="subtitle">R2 のログを読み取り、一覧・サマリー・推移を表示します。</div>
+        </div>
       </div>
+      <nav class="actions" aria-label="links">
+        <a class="action" href="#entries">Entries</a>
+        <a class="action" href="https://github.com/ytkg/gymlog" target="_blank" rel="noreferrer">GitHub</a>
+      </nav>
     </header>
 
-    <div class="grid">
-      <section class="panel">
+    <main class="layout">
+      <aside class="panel">
         <div class="panel-header">
           <div class="panel-title">サマリー</div>
         </div>
         <div class="stats" id="stats"></div>
 
-        <div class="panel-header" style="margin-top: 12px;">
+        <div class="panel-header panel-header--spaced">
           <div class="panel-title">最近の推移</div>
           <div class="status" id="sparkline-status">最大8か月</div>
         </div>
@@ -34,9 +41,9 @@
           <div class="chart-empty" id="sparkline-empty" hidden>データなし</div>
           <canvas id="recent-chart"></canvas>
         </div>
-      </section>
+      </aside>
 
-      <section class="panel">
+      <section class="panel panel--entries">
         <div class="panel-header">
           <div class="panel-title">エントリー一覧</div>
           <div class="status" data-status>読み込み中...</div>
@@ -47,7 +54,7 @@
           ログは R2（bucket: <code>obsidian</code>）の <code>ジム記録/logs.md</code> から読み込みます。
         </div>
       </section>
-    </div>
+    </main>
 
     <footer class="footer">
       <a href="https://github.com/ytkg/gymlog" target="_blank" rel="noreferrer">GitHub: ytkg/gymlog</a>
