--- a/src/index.html
+++ b/src/index.html
@@ -10,42 +10,44 @@
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-  <div class="glow" aria-hidden="true"></div>
   <div class="page">
-    <header class="topbar">
-      <div class="brand">
-        <div class="pill">GYM LOG</div>
-        <div class="brand-text">
-          <div class="title">トレーニングの軌跡</div>
-          <div class="subtitle">R2 のログを読み取り、一覧・サマリー・推移を表示します。</div>
+    <header class="hero">
+      <div class="hero-inner">
+        <div class="hero-badge">GYM LOG</div>
+        <h1 class="hero-title">トレーニングの軌跡</h1>
+        <p class="hero-subtitle">R2 のログを読み取り、サマリー・推移・一覧として整形表示します。</p>
+        <div class="hero-actions" aria-label="links">
+          <a class="btn" href="#entries">Entries</a>
+          <a class="btn btn--ghost" href="https://github.com/ytkg/gymlog" target="_blank" rel="noreferrer">
+            GitHub
+          </a>
         </div>
       </div>
-      <nav class="actions" aria-label="links">
-        <a class="action" href="#entries">Entries</a>
-        <a class="action" href="https://github.com/ytkg/gymlog" target="_blank" rel="noreferrer">GitHub</a>
-      </nav>
     </header>
 
-    <main class="layout">
-      <aside class="panel">
-        <div class="panel-header">
-          <div class="panel-title">サマリー</div>
+    <main class="container">
+      <section class="section">
+        <div class="section-head">
+          <h2 class="section-title">サマリー</h2>
+          <div class="meta-pill" aria-hidden="true">Overview</div>
         </div>
         <div class="stats" id="stats"></div>
+      </section>
 
-        <div class="panel-header panel-header--spaced">
-          <div class="panel-title">最近の推移</div>
+      <section class="section">
+        <div class="section-head section-head--between">
+          <h2 class="section-title">最近の推移</h2>
           <div class="status" id="sparkline-status">最大8か月</div>
         </div>
-        <div class="sparkline" id="sparkline">
+        <div class="chart" id="sparkline">
           <div class="chart-empty" id="sparkline-empty" hidden>データなし</div>
           <canvas id="recent-chart"></canvas>
         </div>
-      </aside>
+      </section>
 
-      <section class="panel panel--entries">
-        <div class="panel-header">
-          <div class="panel-title">エントリー一覧</div>
+      <section class="section section--entries">
+        <div class="section-head section-head--between">
+          <h2 class="section-title">エントリー一覧</h2>
           <div class="status" data-status>読み込み中...</div>
         </div>
         <div class="entries" id="entries"></div>
