design: overhaul layout and add filters

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
       <div class="hero-inner">
         <div class="hero-badge">GYM LOG</div>
         <h1 class="hero-title">トレーニングの軌跡</h1>
-        <p class="hero-subtitle">R2 のログを読み取り、サマリー・推移・一覧として整形表示します。</p>
+        <p class="hero-subtitle">ログを読み込み、ダッシュボード化して振り返りやすくします。</p>
         <div class="hero-actions" aria-label="links">
           <a class="btn" href="#entries">Entries</a>
           <a class="btn btn--ghost" href="https://github.com/ytkg/gymlog" target="_blank" rel="noreferrer">
@@ -25,36 +25,51 @@
       </div>
     </header>
 
-    <main class="container">
-      <section class="section">
-        <div class="section-head">
-          <h2 class="section-title">サマリー</h2>
-          <div class="meta-pill" aria-hidden="true">Overview</div>
-        </div>
-        <div class="stats" id="stats"></div>
-      </section>
-
-      <section class="section">
-        <div class="section-head section-head--between">
-          <h2 class="section-title">最近の推移</h2>
-          <div class="status" id="sparkline-status">最大8か月</div>
-        </div>
-        <div class="chart" id="sparkline">
-          <div class="chart-empty" id="sparkline-empty" hidden>データなし</div>
-          <canvas id="recent-chart"></canvas>
+    <main class="shell">
+      <section class="toolbar" aria-label="filters">
+        <div class="toolbar-row">
+          <label class="field">
+            <span class="field-label">検索</span>
+            <input class="field-input" id="entry-search" type="search" placeholder="種目やメモで検索" />
+          </label>
+          <label class="field">
+            <span class="field-label">月</span>
+            <select class="field-input" id="month-filter"></select>
+          </label>
+          <button class="btn btn--ghost btn--sm" id="clear-filters" type="button">クリア</button>
+          <div class="toolbar-status status" data-status>読み込み中...</div>
         </div>
       </section>
 
-      <section class="section section--entries">
-        <div class="section-head section-head--between">
-          <h2 class="section-title">エントリー一覧</h2>
-          <div class="status" data-status>読み込み中...</div>
-        </div>
-        <div class="entries" id="entries"></div>
-        <div class="notice" id="hint" hidden>
-          ローカルで確認する場合は Worker を起動してください。例: <code>npm run dev</code> を実行し、表示された URL を開いてください。<br>
-          ログは R2（bucket: <code>obsidian</code>）の <code>ジム記録/logs.md</code> から読み込みます。
-        </div>
+      <section class="grid">
+        <section class="panel panel--kpis">
+          <div class="panel-head">
+            <h2 class="panel-title">Dashboard</h2>
+            <div class="status" id="sparkline-status">最大8か月</div>
+          </div>
+          <div class="stats" id="stats"></div>
+          <div class="chart" id="sparkline">
+            <div class="chart-empty" id="sparkline-empty" hidden>データなし</div>
+            <canvas id="recent-chart"></canvas>
+          </div>
+          <div class="panel-subhead">
+            <h3 class="panel-subtitle">月別サマリー</h3>
+            <div class="panel-note" id="months-note"></div>
+          </div>
+          <div class="months" id="months"></div>
+        </section>
+
+        <section class="panel panel--entries" id="entries-panel">
+          <div class="panel-head">
+            <h2 class="panel-title">Entries</h2>
+            <div class="panel-note" id="entries-summary"></div>
+          </div>
+          <div class="entries" id="entries"></div>
+          <div class="notice" id="hint" hidden>
+            ローカルで確認する場合は Worker を起動してください。例: <code>npm run dev</code> を実行し、表示された URL を開いてください。<br />
+            ログは R2（bucket: <code>obsidian</code>）の <code>ジム記録/logs.md</code> から読み込みます。
+          </div>
+        </section>
       </section>
     </main>
 
