--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,8 @@
     </div>
 
     <footer class="footer">
+      <a href="/editor">Editor</a>
+      ·
       <a href="https://github.com/ytkg/gymlog" target="_blank" rel="noreferrer">GitHub: ytkg/gymlog</a>
     </footer>
   </div>
