select box wight

--- a/src/editor.html
+++ b/src/editor.html
@@ -57,7 +57,7 @@
           <div class="field three-col">
             <div>
               <label for="weight">重量</label>
-              <input id="weight" type="text" placeholder="例: 45 or (体重-40)">
+              <select id="weight"></select>
             </div>
             <div>
               <label for="reps">回数</label>
