select box option

--- a/src/editor.html
+++ b/src/editor.html
@@ -51,7 +51,7 @@
         <div class="form-grid">
           <div class="field">
             <label for="exercise">種目</label>
-            <input id="exercise" type="text" list="exercise-options" placeholder="例: ベンチプレス">
+            <select id="exercise"></select>
           </div>
 
           <div class="field three-col">
@@ -92,24 +92,6 @@
       </section>
     </div>
   </div>
-
-  <datalist id="exercise-options">
-    <option value="ベンチプレス"></option>
-    <option value="スクワット"></option>
-    <option value="デッドリフト"></option>
-    <option value="レッグプレス"></option>
-    <option value="レッグエクステンション"></option>
-    <option value="ラットプルダウン"></option>
-    <option value="ラットプルダウンロー"></option>
-    <option value="チンニング"></option>
-    <option value="バイセップスカール"></option>
-    <option value="チェストプレス"></option>
-    <option value="アブドミナル"></option>
-    <option value="トーソローテーション"></option>
-    <option value="スミスマシン"></option>
-    <option value="エアロバイク"></option>
-    <option value="トレッドミル"></option>
-  </datalist>
 
   <script type="module" src="./editor.js"></script>
 </body>
