トレッドミル用の特別フォームを作った

--- a/src/editor.html
+++ b/src/editor.html
@@ -54,7 +54,7 @@
             <select id="exercise"></select>
           </div>
 
-          <div class="field three-col">
+          <div class="field three-col" id="strength-fields">
             <div>
               <label for="weight">重量</label>
               <select id="weight"></select>
@@ -66,6 +66,17 @@
             <div>
               <label for="sets">セット数</label>
               <select id="sets"></select>
+            </div>
+          </div>
+
+          <div class="field two-col is-hidden" id="treadmill-fields">
+            <div>
+              <label for="duration">時間(分)</label>
+              <select id="duration"></select>
+            </div>
+            <div>
+              <label for="speed">速度(km/h)</label>
+              <select id="speed"></select>
             </div>
           </div>
 
